--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,10 @@
                 <enabled>false</enabled>
             </releases>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <pluginRepositories>
