--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
       
   <artifactId>spring-data-couchbase</artifactId>
       
-  <version>5.0.0-SNAPSHOT</version>
+  <version>5.0.0-M4</version>
       
   <name>Spring Data Couchbase</name>
       
