--- a/pom.xml
+++ b/pom.xml
@@ -239,7 +239,7 @@
         <dependency>
             <groupId>com.couchbase.client</groupId>
             <artifactId>java-client</artifactId>
-            <version>3.3.0-SNAPSHOT</version>
+            <version>3.3.0</version>
         </dependency>
 
         <dependency>
