--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
     </parent>
 
     <properties>
-        <couchbase>3.3.2-SNAPSHOT</couchbase>
-        <couchbase.osgi>3.3.2-SNAPSHOT</couchbase.osgi>
+        <couchbase>3.3.2</couchbase>
+        <couchbase.osgi>3.3.2</couchbase.osgi>
         <springdata.commons>3.0.0-SNAPSHOT</springdata.commons>
         <java-module-name>spring.data.couchbase</java-module-name>
         <jodatime>2.10.13</jodatime>
