--- a/spring-data-couchbase/pom.xml
+++ b/spring-data-couchbase/pom.xml
@@ -19,10 +19,19 @@
         <java-module-name>spring.data.couchbase</java-module-name>
         <jodatime>2.10.13</jodatime>
         <jakarta.validation>3.0.1</jakarta.validation>
-        <hibernate.validator>7.0.1.Final</hibernate.validator>
         <apt>1.1.3</apt>
         <querydsl>5.0.0</querydsl>
         <mysema.querydsl>3.7.4</mysema.querydsl>
+        <jakarta.enterprise>3.0.0</jakarta.enterprise>
+        <org.hibernate.validator>7.0.1.Final</org.hibernate.validator>
+        <jakarta.el>4.0.0</jakarta.el>
+        <javax.el>3.0.0</javax.el>
+        <org.glassfish>4.0.2</org.glassfish>
+        <org.apache.geronimo.specs>1.0.1</org.apache.geronimo.specs>
+        <javax.interceptor>1.2.1</javax.interceptor>
+        <com.couchbase.mock>1.5.25</com.couchbase.mock>
+        <com.squareup.okhttp3>4.8.1</com.squareup.okhttp3>
+        <org.awaitility>4.0.3</org.awaitility>
     </properties>
 
     <dependencyManagement>
@@ -67,19 +76,11 @@
             <version>${springdata.commons}</version>
         </dependency>
 
-<!-- in parent 
-        <dependency>
-            <groupId>com.couchbase.client</groupId>
-            <artifactId>java-client</artifactId>
-            <version>${couchbase}</version>
-        </dependency>
--->
-
         <!-- CDI -->
         <dependency>
             <groupId>jakarta.enterprise</groupId>
             <artifactId>jakarta.enterprise.cdi-api</artifactId>
-            <version>3.0.0</version>
+            <version>${jakarta.enterprise}</version>
         </dependency>
 
         <dependency>
@@ -92,14 +93,7 @@
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>7.0.1.Final</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.13</version>
+            <version>${org.hibernate.validator}</version>
             <scope>test</scope>
         </dependency>
 
@@ -137,7 +131,7 @@
         <dependency>
             <groupId>jakarta.el</groupId>
             <artifactId>jakarta.el-api</artifactId>
-            <version>4.0.0</version>
+            <version>${jakarta.el}</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -145,14 +139,14 @@
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
-            <version>3.0.0</version>
+            <version>${javax.el}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.el</artifactId>
-            <version>4.0.2</version>
+            <version>${jakarta.el}</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -162,42 +156,35 @@
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-jcdi_2.0_spec</artifactId>
-            <version>1.0.1</version>
+            <version>${org.apache.geronimo.specs}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>javax.interceptor</groupId>
             <artifactId>javax.interceptor-api</artifactId>
-            <version>1.2.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.openwebbeans</groupId>
-            <artifactId>openwebbeans-se</artifactId>
-            <version>${webbeans}</version>
+            <version>${javax.interceptor}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.couchbase.mock</groupId>
             <artifactId>CouchbaseMock</artifactId>
-            <version>1.5.25</version>
+            <version>${com.couchbase.mock}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.8.1</version>
+            <version>${com.squareup.okhttp3}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp-tls</artifactId>
-            <version>4.8.1</version>
+            <version>${com.squareup.okhttp3}</version>
             <scope>test</scope>
         </dependency>
 
@@ -226,7 +213,7 @@
         <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
-            <version>4.0.3</version>
+            <version>${org.awaitility}</version>
             <scope>test</scope>
         </dependency>
 
