--- a/spring-data-couchbase/pom.xml
+++ b/spring-data-couchbase/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -218,13 +217,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.couchbase.client</groupId>
-            <artifactId>couchbase-encryption</artifactId>
-            <version>3.1.0</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <repositories>
@@ -311,9 +303,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>target/generated-test-sources</outputDirectory>
-                            <processor>
-                                org.springframework.data.couchbase.repository.support.CouchbaseAnnotationProcessor
-                            </processor>
+                            <processor>org.springframework.data.couchbase.repository.support.CouchbaseAnnotationProcessor</processor>
                         </configuration>
                     </execution>
                 </executions>
