--- a/spring-data-couchbase-distribution/pom.xml
+++ b/spring-data-couchbase-distribution/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.data</groupId>
 		<artifactId>spring-data-couchbase-parent</artifactId>
-		<version>5.0.0-SNAPSHOT</version>
+		<version>5.0.0-M6</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
