--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>3.0.0-M6</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
     <modules>
@@ -26,7 +26,7 @@
     <properties>
         <couchbase>3.3.4</couchbase>
         <couchbase.osgi>3.3.4</couchbase.osgi>
-        <springdata.commons>3.0.0-M6</springdata.commons>
+        <springdata.commons>3.0.0-SNAPSHOT</springdata.commons>
         <java-module-name>spring.data.couchbase</java-module-name>
     </properties>
 
@@ -40,8 +40,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-milestone</id>
-            <url>https://repo.spring.io/libs-milestone</url>
+            <id>spring-libs-snapshot</id>
+            <url>https://repo.spring.io/libs-snapshot</url>
         </repository>
         <repository>
             <id>sonatype-snapshot</id>
