--- a/spring-data-couchbase/pom.xml
+++ b/spring-data-couchbase/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -32,6 +33,8 @@
         <com.couchbase.mock>1.5.25</com.couchbase.mock>
         <com.squareup.okhttp3>4.8.1</com.squareup.okhttp3>
         <org.awaitility>4.0.3</org.awaitility>
+        <jackson-joda>2.13.4</jackson-joda>
+        <couchbase.encryption>3.1.0</couchbase.encryption>
     </properties>
 
     <dependencyManagement>
@@ -113,6 +116,13 @@
             <artifactId>joda-time</artifactId>
             <version>${jodatime}</version>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>${jackson-joda}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -217,6 +227,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.couchbase.client</groupId>
+            <artifactId>couchbase-encryption</artifactId>
+            <version>${couchbase.encryption}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -279,7 +296,9 @@
                         </goals>
                         <configuration>
                             <outputDirectory>target/generated-test-sources</outputDirectory>
-                            <processor>org.springframework.data.couchbase.repository.support.CouchbaseAnnotationProcessor</processor>
+                            <processor>
+                                org.springframework.data.couchbase.repository.support.CouchbaseAnnotationProcessor
+                            </processor>
                         </configuration>
                     </execution>
                 </executions>
