--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>3.1.0</version>
+        <version>3.2.0-SNAPSHOT</version>
     </parent>
 
     <properties>
         <couchbase>3.4.6</couchbase>
         <couchbase.osgi>3.4.6</couchbase.osgi>
-        <springdata.commons>3.1.0</springdata.commons>
+        <springdata.commons>3.2.0-SNAPSHOT</springdata.commons>
         <java-module-name>spring.data.couchbase</java-module-name>
         <hibernate.validator>7.0.1.Final</hibernate.validator>
         <apt>1.1.3</apt>
@@ -249,8 +249,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-release</id>
-            <url>https://repo.spring.io/libs-release</url>
+            <id>spring-libs-snapshot</id>
+            <url>https://repo.spring.io/libs-snapshot</url>
         </repository>
         <repository>
             <id>sonatype-snapshot</id>
