--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>2.7.13</version>
+        <version>2.7.14-SNAPSHOT</version>
     </parent>
 
     <properties>
         <couchbase>3.3.4</couchbase>
         <couchbase.osgi>3.3.4</couchbase.osgi>
-        <springdata.commons>2.7.13</springdata.commons>
+        <springdata.commons>2.7.14-SNAPSHOT</springdata.commons>
         <java-module-name>spring.data.couchbase</java-module-name>
         <apt>1.1.3</apt>
         <querydsl>5.0.0</querydsl>
@@ -326,8 +326,20 @@
         </plugins>
     </build>
 
-	<repositories>
-		
-		
-	</repositories>
+  	<repositories>
+  		<repository>
+  			<id>spring-snapshot</id>
+  			<url>https://repo.spring.io/snapshot</url>
+  			<snapshots>
+  				<enabled>true</enabled>
+  			</snapshots>
+  			<releases>
+  				<enabled>false</enabled>
+  			</releases>
+  		</repository>
+  		<repository>
+  			<id>spring-milestone</id>
+  			<url>https://repo.spring.io/milestone</url>
+  		</repository>
+  	</repositories>
 </project>
