--- a/ci/pipeline.properties
+++ b/ci/pipeline.properties
@@ -1,10 +1,10 @@
 # Java versions
 java.main.tag=17.0.8_7-jdk-focal
-java.next.tag=21-jdk-bullseye
+java.next.tag=21_35-jdk-jammy
 
 # Docker container images - standard
 docker.java.main.image=harbor-repo.vmware.com/dockerhub-proxy-cache/library/eclipse-temurin:${java.main.tag}
-docker.java.next.image=harbor-repo.vmware.com/dockerhub-proxy-cache/library/openjdk:${java.next.tag}
+docker.java.next.image=harbor-repo.vmware.com/dockerhub-proxy-cache/library/eclipse-temurin:${java.next.tag}
 
 # Supported versions of MongoDB
 docker.mongodb.4.4.version=4.4.25
@@ -26,3 +26,5 @@ docker.java.inside.docker=-u root -v /var/run/docker.sock:/var/run/docker.sock -
 docker.registry=
 docker.credentials=hub.docker.com-springbuildmaster
 artifactory.credentials=02bd1690-b54f-4c9f-819d-a77cb7a9822c
+gradle-enterprise-cache.credentials=gradle_enterprise_cache_user
+gradle-enterprise.access-key=gradle_enterprise_secret_access_key
