Reintroduce Javadoc legacy mode.
Closes #1905

--- a/pom.xml
+++ b/pom.xml
@@ -318,8 +318,11 @@
                 <artifactId>maven-assembly-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.asciidoctor</groupId>
-                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <legacyMode>true</legacyMode>
+                </configuration>
             </plugin>
         </plugins>
     </build>
