Change scope of javax.inject.Inject to compile.
Closes #1948.

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
