Revert "Change scope of javax.inject.Inject to compile. (#1983)"
This reverts commit 9db3d6d1522e84f3d5b00b8f851aa2e0a11825e0.

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
