Remove unnecessary intermediate String deserialization of document in favour of the raw bytes
Signed-off-by: Emilien Bevierre <emilien.bevierre@couchbase.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ target/
 .project
 .settings
 
+# Local test configuration (credentials, local server settings)
+src/test/resources/integration.local.properties
+
 *.iml
 .idea
 
