--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: CI Build
+name: CI 6.0.x
 
 on:
   workflow_dispatch:
   push:
-    branches: [ main, 6.0.x, 5.5.x, 'issue/**' ]
+    branches: [ 6.0.x, 'issue/6.0.x/**' ]
 
 permissions: read-all
 
