Update GitHub action branch triggers.
See #2117

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: CI Build
+name: CI main
 
 on:
   workflow_dispatch:
   push:
-    branches: [ main, 6.0.x, 5.5.x, 'issue/**' ]
+    branches: [ main, 'issue/**' ]
 
 permissions: read-all
 
