--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -3,7 +3,7 @@ name: Snapshots
 on:
   workflow_dispatch:
   push:
-    branches: [ main, 6.0.x, 5.5.x, 'issue/**' ]
+    branches: [ main, 'issue/**' ]
 
 permissions: read-all
 
